# Perso_Poids

./: .gitignore  README.md  pyproject.toml
Data/: poids.xlsx
XLSX/: poids_2024-06-22.xlsx  poids_2024-07-01.xlsx  poids_2024-07-02.xlsx  poids_2024-07-03.xlsx
src/: poids.py
